--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.1.3",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^4.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
